Housekeeping: Reworked README text and log outputs of generated apps.